MYB-896, MYB-902, moved the scrolling functionality to a wrapping div in order to work in IE, also fixed some windows related spacing problems. Tested on FF and IE8 on Windows and FF and Chrome on Mac.

--- a/devwidgets/mytasks/css/mytasks.css
+++ b/devwidgets/mytasks/css/mytasks.css
@@ -10,7 +10,7 @@
 
 .mytasks .s3d-button.s3d-overlay-button, .myevents .s3d-button.s3d-overlay-button  {
     height:22px;
-    margin-left:10px;
+    margin-left:0;
 }
 
 
@@ -110,7 +110,7 @@ table.noticewidget_listing td, table.noticewidget_listing th {
     padding: 1px 20px 0 5px;       
 }
 
-table.noticewidget_listing.scroller {
+.noticewidget_scroller {
     display:block;
     height: 180px;
     overflow: auto;
